<resources>
    <string name="scheme" translatable="false">com.giswarm.mipt_2024</string>
    <string name="intent_main_text" translatable="false">main.text</string>
    <string name="intent_main_visual" translatable="false">main.visual</string>
    <string name="intent_credentials" translatable="false">credentials</string>
    <string name="intent_settings" translatable="false">settings</string>

    <string name="app_name">Moon Tracker</string>
    <string name="greeting_description">This application will help you to locate the Moon location</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_our_app">Welcome to Our App</string>
    <string name="settings_display_label">Display text on top of moon</string>
    <string name="settings_display_image_shape">Show moon as shape</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="compass">Compass</string>
    <string name="gps">GPS</string>
    <string name="moon">Moon</string>
    <string name="only_text">Text only</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="saved">Saved</string>
    <string name="credentials_text">
        Project created for: MIPT,
        Project created by: Egorov Gordei
    </string>
    <string name="save">Save</string>
    <string name="change_view_text">TEXT</string>
    <string name="change_view_image">IMAGE</string>
    <string name="settings">Settings</string>
    <string name="credentials">Creds</string>
    <string name="placeholder_short">Lorem ipsum</string>
    <string name="chosen_payment_type">Chosen payment type: </string>
    <string name="chosen_payment_type_buy">Purchase</string>
    <string name="chosen_payment_type_subscribe">Subscription</string>
    <string name="credentials_payment_text">Save mon position</string>
    <string name="add">Add</string>
</resources>