<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/btn_small_padding_x"
    android:paddingEnd="@dimen/btn_small_padding_x"
    android:paddingBottom="@dimen/btn_small_padding_y"
    android:orientation="vertical"
    android:background="@color/color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraint_switch_text">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/settings_display_label"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/image_label_switch"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="@dimen/btn_big_padding_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/constraint_switch_text"
        android:id="@+id/constraint_text_moonshape">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/settings_display_image_shape"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/btn_small_padding_y"
        app:layout_constraintTop_toBottomOf="@+id/constraint_text_moonshape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn_save"
        android:id="@+id/constraint_recycler_moonshape">
        <androidx.recyclerview.widget.RecyclerView
            android:nestedScrollingEnabled="false"
            android:id="@+id/image_shape_recycler_view"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="end"
        android:background="@drawable/button_ripple"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/text_small"
        android:paddingStart="@dimen/btn_small_padding_x"
        android:paddingEnd="@dimen/btn_small_padding_x"
        android:paddingTop="@dimen/btn_small_padding_y"
        android:paddingBottom="@dimen/btn_small_padding_y"
        android:layout_height="wrap_content"
        android:id="@+id/settings_btn_save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
